# ErrorImage

./: .gitignore  CMakeLists.txt  README.md
GCLF-Geometry/: CMakeLists.txt
GCLF-Geometry/Basic/: Triangle.h
GCLF-Geometry/Curved/: BezierTriangle.cpp
GCLF-ImageTriSimp/: CMakeLists.txt  ParamParser.cpp  ParamParser.h  main.cpp
GCLF-ImageTriSimp/ColorAndError/: CalcColorOnFace.h  CalcColorOnFace_impl.h  CalcErrorOnFace_impl.h  CalcErrorOnMesh_impl.h  MeshToImage_impl.h
GCLF-ImageTriSimp/CurvedSimplification/: CAssignPixelsToFace.cpp  CAssignPixelsToFace.h  CTopoOperations.cpp  CurvedSimplifier.cpp
GCLF-ImageTriSimp/CurvedSimplification/LocalOperations/: CEdgeFlipper.cpp
GCLF-ImageTriSimp/Image/: ImageDefinition.cpp  ImageDefinition.h
GCLF-ImageTriSimp/LinearSimplification/: LAssignPixelsToFace.h  LTopoOperations.cpp  LinearSimplifier.cpp  LinearSimplifier.h
GCLF-ImageTriSimp/LinearSimplification/LocalOperations/: LLocalOperation.cpp
GCLF-ImageTriSimp/Mesh/: BezierFaceDefinition.cpp  BezierMeshDefinition.cpp  LinearMeshDefinition.h  OperationsRecorder.cpp
GCLF-ThirdPartyLibs/IndirectPredicates/: numerics.h
GCLF-ThirdPartyLibs/OpenMesh/cmake-library/VCI/: VCICompiler.cmake
example/: curved_simplify.sh  error_bound.sh  exeGCLF-ImageTriSimp  linear_simplify.sh  split_log.txt
example/output/: curved_log.txt  linear_log.txt  simplified_curved_mesh.bma  split_log.txt
